attempt to fix 100vh issue on mobile take 5

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 
 #root {
   overflow: hidden;
-  position: relative;
+  position: fixed;
   width: 100%;
 }
 
